--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
 <body>
     <nav>
        <div class="nav-left">
-        <img src="/images/logo.png" alt="" class="logo">
+        <img src="images/logo.png" alt="" class="logo">
         <ul>
-            <li><img src="/images/notification.png" alt=""></li>
-            <li><img src="/images/inbox.png" alt=""></li>
-            <li><img src="/images/video.png" alt=""></li>
+            <li><img src="images/notification.png" alt=""></li>
+            <li><img src="images/inbox.png" alt=""></li>
+            <li><img src="images/video.png" alt=""></li>
         </ul>
     </div>
     <div class="nav-right">
         <div class="search-box">
-            <img src="/images/search.png" alt="">
+            <img src="images/search.png" alt="">
             <input type="text" placeholder="Search">
         </div>
         <div class="nav-user-icon online">
-            <img src="/images//profile-pic.png" alt="">
+            <img src="images//profile-pic.png" alt="">
         </div>
     </div>
     </nav>
@@ -33,28 +33,54 @@
 
         <div class="left-sidebar">
             <div class="imp-links">
-                <a href="#"><img src="/images/news.png" alt=""> Latest News</a>
-                <a href="#"><img src="/images/friends.png" alt=""> Friends</a>
-                <a href="#"><img src="/images/group.png" alt="">Group</a>
-                <a href="#"><img src="/images/marketplace.png" alt=""> Marketplace</a>
-                <a href="#"><img src="/images/watch.png" alt=""> Watch</a>
+                <a href="#"><img src="images/news.png" alt=""> Latest News</a>
+                <a href="#"><img src="images/friends.png" alt=""> Friends</a>
+                <a href="#"><img src="images/group.png" alt="">Group</a>
+                <a href="#"><img src="images/marketplace.png" alt=""> Marketplace</a>
+                <a href="#"><img src="images/watch.png" alt=""> Watch</a>
                 <a href="#">See More</a>
             </div>
             <div class="shortcut-links">
                 <p>Your Shortcuts</p>
-                <a href="#"><img src="/images/shortcut-1.png" alt=""> Web Developers</a>
-                <a href="#"><img src="/images/shortcut-2.png" alt=""> Web Design</a>
-                <a href="#"><img src="/images/shortcut-3.png" alt=""> Full Stack Developers</a>
-                <a href="#"><img src="/images/shortcut-4.png" alt=""> Website Experts</a>
+                <a href="#"><img src="images/shortcut-1.png" alt=""> Web Developers</a>
+                <a href="#"><img src="images/shortcut-2.png" alt=""> Web Design</a>
+                <a href="#"><img src="images/shortcut-3.png" alt=""> Full Stack Developers</a>
+                <a href="#"><img src="images/shortcut-4.png" alt=""> Website Experts</a>
 
             </div>
         </div>
-        <div class="main-content"></div>
+
+
+        <div class="main-content">
+            <div class="story-gallery">
+                <div class="story story1">
+                    <img src="images/upload.png" alt="">
+                    <p>Post Story</p>
+                </div>
+                <div class="story story2">
+                    <img src="images/member-1.png" alt="">
+                    <p>Alison</p>
+                </div>
+                <div class="story story3">
+                    <img src="images/member-2.png" alt="">
+                    <p>Jackson</p>
+                </div>
+                <div class="story story4">
+                    <img src="images/member-3.png" alt="">
+                    <p>Samona</p>
+                </div>
+                <div class="story story5">
+                    <img src="images/member-4.png" alt="">
+                    <p>John Doe</p>
+                </div>
+            </div>
+        </div>
+
+        
         <div class="right-sidebar">
             <div class="sidebar-title">
                 <h4>Events</h4>
                 <a href="#">See All</a>
-
             </div>
 
             <div class="event">
@@ -78,6 +104,33 @@
                     <p><i class="fas fa-map-marker-alt"></i> Willson Tech Park</p>
                     <a href="#">More Info</a>
                 </div>
+            </div>
+            <div class="sidebar-title">
+                <h4>Advertisement</h4>
+                <a href="#">close</a>
+            </div>
+            <img src="images/advertisement.png" class="sidebar-ads">
+            <div class="sidebar-title">
+                <h4>Conversation</h4>
+                <a href="#">Hide Chat</a>
+            </div>
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-1.png">
+                </div>
+                <p>Alison Mina</p>
+            </div>
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-2.png">
+                </div>
+                <p>Jackson Aston</p>
+            </div>
+            <div class="online-list">
+                <div class="online">
+                    <img src="images/member-3.png">
+                </div>
+                <p>Samona Rose</p>
             </div>
         </div>
     </div>
