--- a/index.html
+++ b/index.html
@@ -221,6 +221,7 @@
                     </div>
                 </div>
             </div>
+            <button type="button" class="load-more-btn">Load Mord</button>
 
         </div>
         <div class="right-sidebar">
