--- a/index.html
+++ b/index.html
@@ -29,6 +29,27 @@
                 <img src="images//profile-pic.png" alt="">
             </div>
         </div>
+
+        <div class="settings-menu">
+            <div class="settings-menu-inner">
+                 <div class="user-profile">
+                <img src="images/profile-pic.png">
+                <div>
+                    <p>John Nicholson</p>
+                    <a href="#">Seee your proflie</a>
+                </div>
+            </div>
+            <div class="user-profile">
+                <img src="images/feedback.png" alt="">
+                <div>
+                    <p>Give Feedback</p>
+                    <a href="#">Hhelp us to improve the new design</a>
+                </div>
+            </div>
+            </div>
+           
+        </div>
+
     </nav>
 
     <div class="container">
@@ -280,6 +301,11 @@
                 <p>Samona Rose</p>
             </div>
         </div>
+    </div>
+
+
+    <div class="footer">
+        <p>Copyright 2022 - Easy Tutorials YoutubeChannel</p>
     </div>
 
 
