--- a/index.html
+++ b/index.html
@@ -46,7 +46,23 @@
                     <a href="#">Hhelp us to improve the new design</a>
                 </div>
             </div>
+            <div class="settings-links">
+                <img src="images/setting.png" class="settings-icon">
+                <a href="#">Settings & Privacy <img src="images/arrow.png" alt="" width="10px"></a>
             </div>
+            <div class="settings-links">
+                <img src="images/help.png" class="settings-icon">
+                <a href="#">Help & Support <img src="images/arrow.png" alt="" width="10px"></a>
+            </div>
+            <div class="settings-links">
+                <img src="images/display.png" class="settings-icon">
+                <a href="#">Display & Accessibility <img src="images/arrow.png" alt="" width="10px"></a>
+            </div>
+            <div class="settings-links">
+                <img src="images/logout.png" class="settings-icon">
+                <a href="#">Logout <img src="images/arrow.png" alt="" width="10px"></a>
+            </div>
+            
            
         </div>
 
