--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <img src="images/search.png" alt="">
                 <input type="text" placeholder="Search">
             </div>
-            <div class="nav-user-icon online">
+            <div class="nav-user-icon online" onclick="settingsMenuToggle()">
                 <img src="images//profile-pic.png" alt="">
             </div>
         </div>
@@ -323,7 +323,7 @@
     <div class="footer">
         <p>Copyright 2022 - Easy Tutorials YoutubeChannel</p>
     </div>
-
+<script src="script.js"></script>
 
 </body>
 
