--- a/profile.html
+++ b/profile.html
@@ -106,7 +106,7 @@
                         <li><img src="images/profile-study.png" alt=""> Studied at Amity University</li>
                         <li><img src="images/profile-study.png" alt=""> Went to DPS Delhi</li>
                         <li><img src="images/profile-home.png" alt=""> Lives in Bangalore, India</li>
-                        <li><img src="images/location.png" alt=""> Form Bangalore, India</li>
+                        <li><img src="images/profile-location.png" alt=""> Form Bangalore, India</li>
                     </ul>
                 </div>
             </div>
