--- a/profile.html
+++ b/profile.html
@@ -13,7 +13,9 @@
 <body>
     <nav>
         <div class="nav-left">
-            <img src="images/logo.png" alt="" class="logo">
+            <a href="index.html">
+                <img src="images/logo.png" alt="" class="logo">
+            </a>
             <ul>
                 <li><img src="images/notification.png" alt=""></li>
                 <li><img src="images/inbox.png" alt=""></li>
@@ -132,15 +134,33 @@
                     </div>
                     <p>120 (10 mutual)</p>
                     <div class="friends-box">
-                        <div><img src="images/member-1.png" alt=""><p>Joseph N</p></div>
-                        <div><img src="images/member-2.png" alt=""><p>Nathan N</p></div>
-                        <div><img src="images/member-3.png" alt=""><p>George D</p></div>
-                        <div><img src="images/member-4.png" alt=""><p>Francis L</p></div>
-                        <div><img src="images/member-5.png" alt=""><p>Anthony E</p></div>
-                        <div><img src="images/member-6.png" alt=""><p>Michael A</p></div>
-                        <div><img src="images/member-7.png" alt=""><p>Edward M</p></div>
-                        <div><img src="images/member-8.png" alt=""><p>Bradon C</p></div>
-                        <div><img src="images/member-9.png" alt=""><p>James Doe</p></div>
+                        <div><img src="images/member-1.png" alt="">
+                            <p>Joseph N</p>
+                        </div>
+                        <div><img src="images/member-2.png" alt="">
+                            <p>Nathan N</p>
+                        </div>
+                        <div><img src="images/member-3.png" alt="">
+                            <p>George D</p>
+                        </div>
+                        <div><img src="images/member-4.png" alt="">
+                            <p>Francis L</p>
+                        </div>
+                        <div><img src="images/member-5.png" alt="">
+                            <p>Anthony E</p>
+                        </div>
+                        <div><img src="images/member-6.png" alt="">
+                            <p>Michael A</p>
+                        </div>
+                        <div><img src="images/member-7.png" alt="">
+                            <p>Edward M</p>
+                        </div>
+                        <div><img src="images/member-8.png" alt="">
+                            <p>Bradon C</p>
+                        </div>
+                        <div><img src="images/member-9.png" alt="">
+                            <p>James Doe</p>
+                        </div>
                     </div>
                 </div>
             </div>
