--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <img src="images/profile-pic.png">
                 <div>
                     <p>John Nicholson</p>
-                    <a href="#">Seee your proflie</a>
+                    <a href="profile.html">Seee your proflie</a>
                 </div>
             </div>
             <div class="user-profile">
